// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for Custom buttom Snapshot test for CustomButton renders as icon 1`] = `
<button
  className="material-icons"
  onClick={[Function]}
/>
`;

exports[`Snapshot test for Custom buttom Snapshot test for CustomButton renders as text 1`] = `
<button
  onClick={[Function]}
/>
`;
